--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
+<!-- Wireframe Basecode for Responsive Style w/ Media Queries -->
+
+<!DOCTYPE html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
   <title>Responsive-Portfolio/title>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="responsive_style.css">
 </head>
 
 <body>
