really this is getting ridiculous

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Responsive-Portfolio/title>
+  <title>Responsive-Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="responsive_style.css">
 </head>
